--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "images-scraper",
-  "version": "2.0.11",
+  "version": "2.0.12",
   "description": "Simple and fast scraper for Google/Bing images using Nightmare and Request",
   "main": "index.js",
+  "bin": {
+    "images-scraper": "cli.js"
+  },
   "scripts": {
     "test": "mocha test"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pevers/images-scraper.git"
+    "url": "git+https://github.com/tecfu/images-scraper.git"
   },
   "keywords": [
     "scraper",
@@ -18,9 +21,9 @@
   "author": "Peter Evers",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/pevers/images-scraper/issues"
+    "url": "https://github.com/tecfu/images-scraper/issues"
   },
-  "homepage": "https://github.com/pevers/images-scraper#readme",
+  "homepage": "https://github.com/tecfu/images-scraper#readme",
   "dependencies": {
     "bluebird": "^3.0.5",
     "chai": "^3.4.1",
