--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "google",
     "images"
   ],
-  "author": "Peter Evers",
+  "author": "Peter Evers, Tec Fu",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/tecfu/images-scraper/issues"
