--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lodash": "^3.10.1",
     "nightmare": "^3.0.1",
     "request": "^2.67.0",
-    "validator": "^4.5.0"
+    "validator": "^4.5.0",
+    "yargs": "^11.0.0"
   }
 }
